:lipstick: #136 Menu : fix round size on small screen

--- a/client/src/pages/Menu/menu.scss
+++ b/client/src/pages/Menu/menu.scss
@@ -25,7 +25,6 @@
       background-color: $color-blue;
       width: 32rem;
       height: 32rem;
-      max-height: 100%;
 
       &__text {
         font-family: $font-infini-regular;
